included weighted bayes
functionalized everything and added the weighted bayes simulation function

--- a/A3/Assignment 3.Rmd
+++ b/A3/Assignment 3.Rmd
@@ -12,9 +12,76 @@ pacman::p_load(tidyverse, brms)
 
 ```
 
-# SIMPLE BAYES
+# General functions
+```{r function: first round}
+# function to generate data for first round
+first_round <- function(trials){
+  rating1 <- round(inv_logit_scaled(rnorm(trials, 0.35, 0.85))*9, 0)
+  return(rating1)
+}
+```
 
-## second try: working
+```{r function: other's rating}
+# function to generate other's ratings (feedback)
+other_rating <- function(trials, rating1){
+  # make empty lists
+  trial_no <- rep(NA, trials)
+  feedback <- rep(NA, trials)
+  other <- rep(NA, trials)
+
+  # sample feedback
+  for (i in 1:trials){
+    feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
+    other[i] = rating1[i] + feedback_temp
+  
+  
+  # make sure other's rating does not go out of bound [1-8]
+  while (other[i]>8 | other[i]<1){
+    feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
+    other[i] = rating1[i] + feedback_temp
+  }
+  
+  # save variables
+  feedback[i] = feedback_temp
+  trial_no[i] = i
+  }
+
+  # save in data frame 
+  df_round1 <- tibble(trial_no, rating1, other, feedback)
+  
+  return(df_round1)
+}
+
+```
+
+```{r functions: second round}
+
+# SIMPLE BAYES: function to generate data for second round
+second_round_SB <- function(df, bias){
+  df <- df %>% mutate(
+    rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability), 
+    rating2 = round(rating2_probability * 9, 0)
+    ) %>% 
+    select(trial_no,rating1, other, feedback, rating2,everything())
+  
+  return(df)
+}
+
+# WEIGHTED BAYES: function to generate data for second round
+second_round_WB <- function(df, bias, weight_self, weight_other){
+  df <- df %>% mutate(
+    rating2_probability = WeightedBayes_f(bias, rating1_probability, other_probability, weight_self, weight_other), 
+    rating2 = round(rating2_probability * 9, 0)
+    ) %>% 
+    select(trial_no,rating1, other, feedback, rating2,everything())
+  
+  return(df)
+}
+
+```
+
+
+# SIMPLE BAYES
 
 ```{r values}
 # values
@@ -37,33 +104,11 @@ SimpleBayes_f <- function(bias, rating1, other){
 # simulate data for simple bayes
 sim_data_SB <- function(trials){
   
-  # make empty lists
-  trial_no <- rep(NA, trials)
-  feedback <- rep(NA, trials)
-  other <- rep(NA, trials)
-  
   # initiate first ratings
-  rating1 <- round(inv_logit_scaled(rnorm(trials, 0.35, 0.85))*9, 0)
-
-  # sample feedback
-  for (i in 1:trials){
-    feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-    other[i] = rating1[i] + feedback_temp
-  
-  
-  # make sure other's rating does not go out of bound [1-8]
-  while (other[i]>8 | other[i]<1){
-    feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-    other[i] = rating1[i] + feedback_temp
-  }
-  
-  # save variables
-  feedback[i] = feedback_temp
-  trial_no[i] = i
-  }
-
-  # save in data frame 
-  df_round1 <- tibble(trial_no, rating1, other, feedback)
+  rating1 <- init_first(trials)
+ 
+  # generate other's rating and feedback
+  df_round1 <- other_rating(trials, rating1)
   
   # add numbers in probability space
   df <- df_round1 %>% mutate(
@@ -72,16 +117,97 @@ sim_data_SB <- function(trials){
   )
   
   # get ratings for second round
-  df <- df %>% mutate(
-    rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability), 
-    rating2 = round(rating2_probability * 9, 0)
-    ) %>% 
-    select(trial_no,rating1, other, feedback, rating2,everything())
+  df <- second_round_SB(df, bias)
   
   return(df)
 }
 
-# test function
+```
+
+```{r generate data}
+
 SB_data <- sim_data_SB(trials)
 
 ```
+
+## Fitting the model
+
+```{r import model}
+
+## Specify where the model is
+file <- file.path("stan/model_SB.stan")
+model_SB <- cmdstan_model(file, 
+                     cpp_options = list(stan_threads = TRUE),
+                     stanc_options = list("O1")) 
+```
+
+
+# WEIGHTED BAYES
+
+
+```{r values}
+# values
+bias <- 0
+trials <- 80
+weight_self <- 0.3
+weight_other <- 0.4
+```
+
+
+```{r function: weighted bayes}
+WeightedBayes_f <-  function(bias, rating1, other, weight_self, weight_other){
+  w1 <- 0.5 * weight_self + 0.5 # transform from a [0;1] space to a [0.5;1] space
+  w2 <- 0.5 * weight_other + 0.5
+  outcome <- inv_logit_scaled(bias + w1 * logit_scaled(rating1) + w2 * logit_scaled(other))
+  return(outcome)
+}
+
+# WeightedBayes_f(bias = 0, rating1 = 5/9, other = 6/9, weight_self = 0.3, weight_other = 0.4) * 9
+
+# Jesper says plot all combinations of ratings and weights to check if it does what it should
+
+```
+
+```{r function: simulate data}
+
+sim_data_WB <- function(trials, weight_self, weight_other){
+  
+  # initiate first ratings
+  rating1 <- init_first(trials)
+
+  # generate other's rating and feedback
+  df_round1 <- other_rating(trials, rating1)
+  
+  # add numbers in probability space
+  df <- df_round1 %>% mutate(
+    rating1_probability = rating1/9,
+    other_probability = other/9
+  )
+  
+  # get ratings for second round
+  df <- second_round_WB(df, bias, weight_self, weight_other)
+  
+  return(df)
+  
+}
+
+
+```
+
+```{r generate data}
+
+WB_data <- sim_data_WB(trials, weight_self, weight_other)
+
+```
+
+## Fitting the model
+
+```{r import model}
+
+## Specify where the model is
+file <- file.path("stan/model_WB.stan")
+model_WB <- cmdstan_model(file, 
+                     cpp_options = list(stan_threads = TRUE),
+                     stanc_options = list("O1")) 
+```
+
