--- a/A3/Assignment 3.Rmd
+++ b/A3/Assignment 3.Rmd
@@ -2,13 +2,20 @@
 title: "Assignment 3"
 author: "Astrid Nørgaard Fonager"
 date: "2023-04-20"
-output: word_document
+output:
+  prettydoc::html_pretty:
+    theme: cayman
+    highlight: github
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(pacman)
-pacman::p_load(tidyverse, brms)
+pacman::p_load(tidyverse,
+        here,
+        posterior,
+        cmdstanr,
+        brms, tidybayes, future, purrr, furrr, prettydoc)
 
 ```
 
@@ -16,9 +23,14 @@ pacman::p_load(tidyverse, brms)
 ```{r function: first round}
 # function to generate data for first round
 first_round <- function(trials){
-  rating1 <- round(inv_logit_scaled(rnorm(trials, 0.35, 0.85))*9, 0)
+  rating1 <- round(inv_logit_scaled(rnorm(trials, 0, 0.85))*9, 0)
+  
+  while (max(rating1) > 8){ # ensure no ratings above 8
+    rating1 <- round(inv_logit_scaled(rnorm(trials, 0, 0.85))*9, 0)
+  }
   return(rating1)
 }
+
 ```
 
 ```{r function: other's rating}
@@ -58,22 +70,34 @@ other_rating <- function(trials, rating1){
 
 # SIMPLE BAYES: function to generate data for second round
 second_round_SB <- function(df, bias){
-  df <- df %>% mutate(
-    rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability), 
-    rating2 = round(rating2_probability * 9, 0)
-    ) %>% 
-    select(trial_no,rating1, other, feedback, rating2,everything())
+  df_temp <- df %>% mutate(
+    rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability))
+  
+  while (max(rating1) > 8){ # ensure no ratings above 8
+    df_temp <- df %>% mutate(
+    rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability))
+  }
+  
+  df <- df_temp %>% mutate (
+    rating2 = round(rating2_probability * 9, 0)) %>% 
+    dplyr::select(trial_no,rating1, other, feedback, rating2,everything())
   
   return(df)
 }
 
 # WEIGHTED BAYES: function to generate data for second round
 second_round_WB <- function(df, bias, weight_self, weight_other){
-  df <- df %>% mutate(
-    rating2_probability = WeightedBayes_f(bias, rating1_probability, other_probability, weight_self, weight_other), 
-    rating2 = round(rating2_probability * 9, 0)
-    ) %>% 
-    select(trial_no,rating1, other, feedback, rating2,everything())
+  df_temp <- df %>% mutate(
+  rating2_probability = WeightedBayes_f(bias, rating1_probability, other_probability, weight_self, weight_other))
+  
+  while (max(rating1) > 8){ # ensure no ratings above 8
+    df_temp <- df %>% mutate(
+    rating2_probability = WeightedBayes_f(bias, rating1_probability, other_probability, weight_self, weight_other))
+  }
+  
+  df <- df_temp %>% mutate (
+    rating2 = round(rating2_probability * 9, 0)) %>% 
+    dplyr::select(trial_no,rating1, other, feedback, rating2,everything())
   
   return(df)
 }
@@ -102,10 +126,10 @@ SimpleBayes_f <- function(bias, rating1, other){
 ```{r function: simulate data}
 
 # simulate data for simple bayes
-sim_data_SB <- function(trials){
+sim_data_SB <- function(trials, bias){
   
   # initiate first ratings
-  rating1 <- init_first(trials)
+  rating1 <- first_round(trials)
  
   # generate other's rating and feedback
   df_round1 <- other_rating(trials, rating1)
@@ -113,7 +137,8 @@ sim_data_SB <- function(trials){
   # add numbers in probability space
   df <- df_round1 %>% mutate(
     rating1_probability = rating1/9,
-    other_probability = other/9
+    other_probability = other/9,
+    bias = bias
   )
   
   # get ratings for second round
@@ -127,18 +152,74 @@ sim_data_SB <- function(trials){
 ```{r generate data}
 
 SB_data <- sim_data_SB(trials)
-
+max(SB_data$rating1)
+max(SB_data$rating2)
 ```
+
+```{r sim_d_and_fit_SB data function}
+sim_d_and_fit_SB <- function(seed, trials, bias, clean = TRUE){
+  
+  # simulate data
+  SB_data = sim_data_SB(trials, bias)
+  
+  # make data list
+  data_simpleBayes <- list(
+  trials = trials,
+  rating2 = SB_data$rating2_probability, # outcome variable
+  rating1 = SB_data$rating1_probability, # predictor
+  other = SB_data$other_probability, # predictor
+  bias = SB_data$bias
+)
+  # fit model to data
+  samples <- model_SB$sample(
+    data = data_simpleBayes,
+   # fixed_param = TRUE,
+    seed = 1985,
+    chains = 2,
+    parallel_chains = 2,
+    threads_per_chain = 2,
+    iter_warmup = 1500,
+    iter_sampling = 3000,
+    refresh = 500
+  )
+  
+  if(clean == TRUE) {
+  # get samples
+  draws_df <- as_draws_df(samples$draws())
+  
+  return(draws_df)
+  }
+  
+  else if(clean == FALSE){
+    return(samples)
+  }
+}
+```
+
 
 ## Fitting the model
 
 ```{r import model}
+setwd("/Users/astridnorgaardfonager/Documents/CogSci/8th semester/ACM/Assignments/A3/")
 
 ## Specify where the model is
-file <- file.path("stan/model_SB.stan")
-model_SB <- cmdstan_model(file, 
+file_SB <- file.path("stan/SB_model.stan")
+model_SB <- cmdstan_model(file_SB, 
                      cpp_options = list(stan_threads = TRUE),
                      stanc_options = list("O1")) 
+```
+
+
+# simulate and fit SB data
+```{r simulate and fit SB data}
+test_SB <- sim_d_and_fit_SB(seed, trials, bias, clean = T)
+test_model_comparison <- sim_d_and_fit_SB(seed, trials, bias, clean = F)
+```
+
+```{r}
+Loo_test_SB <- test_model_comparison$loo(save_psis = TRUE, cores = 4)
+plot(Loo_test_SB)
+
 ```
 
 
@@ -157,7 +238,7 @@ weight_other <- 0.4
 ```{r function: weighted bayes}
 WeightedBayes_f <-  function(bias, rating1, other, weight_self, weight_other){
   w1 <- 0.5 * weight_self + 0.5 # transform from a [0;1] space to a [0.5;1] space
-  w2 <- 0.5 * weight_other + 0.5
+  w2 <- 0.5 * weight_other + 0.5 # WAIT! IT SHOULD GO FROM 0-0.5
   outcome <- inv_logit_scaled(bias + w1 * logit_scaled(rating1) + w2 * logit_scaled(other))
   return(outcome)
 }
@@ -170,22 +251,25 @@ WeightedBayes_f <-  function(bias, rating1, other, weight_self, weight_other){
 
 ```{r function: simulate data}
 
-sim_data_WB <- function(trials, weight_self, weight_other){
+sim_data_WB <- function(trials, bias, weight_self, weight_other){
   
   # initiate first ratings
-  rating1 <- init_first(trials)
+  rating1 <- first_round(trials)
 
   # generate other's rating and feedback
   df_round1 <- other_rating(trials, rating1)
   
   # add numbers in probability space
-  df <- df_round1 %>% mutate(
+  temp <- df_round1 %>% mutate(
     rating1_probability = rating1/9,
-    other_probability = other/9
+    other_probability = other/9,
+    weight_other = weight_other,
+    weight_self = weight_self,
+    bias = bias
   )
   
   # get ratings for second round
-  df <- second_round_WB(df, bias, weight_self, weight_other)
+  df <- second_round_WB(temp, bias, weight_self, weight_other)
   
   return(df)
   
@@ -196,13 +280,16 @@ sim_data_WB <- function(trials, weight_self, weight_other){
 
 ```{r generate data}
 
-WB_data <- sim_data_WB(trials, weight_self, weight_other)
+WB_data <- sim_data_WB(trials, bias, weight_self, weight_other)
+max(WB_data$rating1)
+max(WB_data$rating2)
 
 ```
 
 ## Fitting the model
 
 ```{r import model}
+setwd("/Users/astridnorgaardfonager/Documents/CogSci/8th semester/ACM/Assignments/A2/")
 
 ## Specify where the model is
 file <- file.path("stan/model_WB.stan")
